k8s/network-policies/postgres-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-policy
  namespace: vulnops
spec:
  podSelector:
    matchLabels:
      app: vulnops-postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vulnops-backend
      ports:
        - port: 5432
  # no egress rules — postgres never initiates outbound connections
